Trying to fix text alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,8 @@ body
 {
     font-size: 40px;
     width: 100%;
-    margin: 2% 5%;
-    text-align: bottom;
+    margin-top: 10px;
+    text-align: center;
     font-family: 'Ubuntu', sans-serif;
     color: #FFFFFF;
 }
@@ -18,6 +18,7 @@ body
     font-size: 30px;
     width: 70%;
     margin-left: 15%;
+    margin-right: 15%;
     padding: 25px;
     background-color: #b2b2b2;
 }
@@ -36,6 +37,7 @@ body
     font-size: 30px;
     width: 70%;
     margin-left: 15%;
+    margin-right: 15%;
     padding: 25px;
     background-color: #b2b2b2;
 }
